Added a rudimentary INSTALL file.

The "misc" set is now installed by default, as it is required for
the ATF XML DTD, XSL files, and style sheets.

The "test" command now exports the raw and XML format ATF output
to the host, along with some auxiliary files needed for further
processing of the XML output.

Add support for FreeBSD hosts, from Kurt Lidl.

- 1.15 released -

Increase the timeout for "--run" commands to one hour.

Restrict snapshotting to the system disk, so that additional disks
mounted for the purpose of exporting data can be persistently
modified.

- 1.14 released -

Increase the maximum number of boot floppies, as four is no longer
enough for amd64.

New command line option "--run".

Handle the additional dialogs displayed by sysinst when an
i386 or amd64 system has more than one disk.

Add the words "OR CONTRIBUTORS" to the disclaimer of liabilities
in the copyright notice.

- 1.13 released -

When installing NetBSD/sparc, use a terminal type of "xterm" rather
than "sun", as anita is more likely run from an xterm or other
ANSI-like terminal than from a sun console.

In the BUGS section of the man page, mention the specific NetBSD ports
affected.

Fix typos in the man page.

- 1.12 released -

Add support for the amd64 and sparc ports as targets.

Improve error reporting for common types of unsuitable URLs.

Avoid sending multiple responses when the NetBSD 3.0.1 sysinst
updates the menu display multiple times.

New command line option "--disk-size".

- 1.11 released -

Remove '-serial stdio' from qemu argument list.  It's not actually
needed when the '-nographic' option is present, and it confuses
qemu 0.12.

- 1.10 released -

Deal with recent sysinst changes: sysinst no longer displays a dialog
to select the CD-ROM device path, etc.

New command line option "--qemu-args".

Anita no longer passes the "-no-acpi" option to qemu by default,
because the ACPI case now works with -current, and disabling